// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card Default renders correctly 1`] = `
<article
  class="ecl-card"
>
  <header
    class="ecl-card__header"
  >
    <div
      aria-label="card image"
      class="ecl-card__image"
      role="img"
      style="background-image:url('https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg')"
    />
    <div
      class="ecl-card__meta"
    >
      Meta1 | Meta2
    </div>
    <h1
      class="ecl-card__title"
    >
      <a
        class="ecl-link ecl-link--standalone"
        href="/example"
      >
        Better regulation
      </a>
    </h1>
  </header>
  <div
    class="ecl-card__body"
  >
    <div
      class="ecl-card__description"
    >
      Transparently designing and evaluating evidence-based EU legislation, backed by citizens views.
    </div>
  </div>
  <footer
    class="ecl-card__footer"
  >
    <ul
      class="ecl-card__info-container"
    >
      <li
        class="ecl-card__info-item"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--xs"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#general--calendar"
          />
        </svg>
        <span
          class="ecl-card__info-label"
        >
          2018/10/22
        </span>
      </li>
      <li
        class="ecl-card__info-item"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--xs"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#general--location"
          />
        </svg>
        <span
          class="ecl-card__info-label"
        >
          Luxembourg
        </span>
      </li>
    </ul>
    <ul
      class="ecl-card__tag-container"
    >
      <li
        class="ecl-card__tag-item"
      >
        <a
          class="ecl-tag ecl-card__tag"
          href="/example"
        >
          tag 1
        </a>
      </li>
      <li
        class="ecl-card__tag-item"
      >
        <a
          class="ecl-tag ecl-card__tag"
          href="/example"
        >
          tag 2
        </a>
      </li>
      <li
        class="ecl-card__tag-item"
      >
        <a
          class="ecl-tag ecl-card__tag"
          href="/example"
        >
          tag 3
        </a>
      </li>
    </ul>
  </footer>
</article>
`;

exports[`Card Default renders correctly with extra attributes 1`] = `
<article
  class="ecl-card"
  data-test="data-test-value"
  data-test-1="data-test-value-1"
>
  <header
    class="ecl-card__header"
  >
    <div
      aria-label="card image"
      class="ecl-card__image"
      role="img"
      style="background-image:url('https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg')"
    />
    <div
      class="ecl-card__meta"
    >
      Meta1 | Meta2
    </div>
    <h1
      class="ecl-card__title"
    >
      <a
        class="ecl-link ecl-link--standalone"
        href="/example"
      >
        Better regulation
      </a>
    </h1>
  </header>
  <div
    class="ecl-card__body"
  >
    <div
      class="ecl-card__description"
    >
      Transparently designing and evaluating evidence-based EU legislation, backed by citizens views.
    </div>
  </div>
  <footer
    class="ecl-card__footer"
  >
    <ul
      class="ecl-card__info-container"
    >
      <li
        class="ecl-card__info-item"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--xs"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#general--calendar"
          />
        </svg>
        <span
          class="ecl-card__info-label"
        >
          2018/10/22
        </span>
      </li>
      <li
        class="ecl-card__info-item"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--xs"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#general--location"
          />
        </svg>
        <span
          class="ecl-card__info-label"
        >
          Luxembourg
        </span>
      </li>
    </ul>
    <ul
      class="ecl-card__tag-container"
    >
      <li
        class="ecl-card__tag-item"
      >
        <a
          class="ecl-tag ecl-card__tag"
          href="/example"
        >
          tag 1
        </a>
      </li>
      <li
        class="ecl-card__tag-item"
      >
        <a
          class="ecl-tag ecl-card__tag"
          href="/example"
        >
          tag 2
        </a>
      </li>
      <li
        class="ecl-card__tag-item"
      >
        <a
          class="ecl-tag ecl-card__tag"
          href="/example"
        >
          tag 3
        </a>
      </li>
    </ul>
  </footer>
</article>
`;

exports[`Card Default renders correctly with extra class names 1`] = `
<article
  class="ecl-card custom-class custom-class--test"
>
  <header
    class="ecl-card__header"
  >
    <div
      aria-label="card image"
      class="ecl-card__image"
      role="img"
      style="background-image:url('https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg')"
    />
    <div
      class="ecl-card__meta"
    >
      Meta1 | Meta2
    </div>
    <h1
      class="ecl-card__title"
    >
      <a
        class="ecl-link ecl-link--standalone"
        href="/example"
      >
        Better regulation
      </a>
    </h1>
  </header>
  <div
    class="ecl-card__body"
  >
    <div
      class="ecl-card__description"
    >
      Transparently designing and evaluating evidence-based EU legislation, backed by citizens views.
    </div>
  </div>
  <footer
    class="ecl-card__footer"
  >
    <ul
      class="ecl-card__info-container"
    >
      <li
        class="ecl-card__info-item"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--xs"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#general--calendar"
          />
        </svg>
        <span
          class="ecl-card__info-label"
        >
          2018/10/22
        </span>
      </li>
      <li
        class="ecl-card__info-item"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--xs"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#general--location"
          />
        </svg>
        <span
          class="ecl-card__info-label"
        >
          Luxembourg
        </span>
      </li>
    </ul>
    <ul
      class="ecl-card__tag-container"
    >
      <li
        class="ecl-card__tag-item"
      >
        <a
          class="ecl-tag ecl-card__tag"
          href="/example"
        >
          tag 1
        </a>
      </li>
      <li
        class="ecl-card__tag-item"
      >
        <a
          class="ecl-tag ecl-card__tag"
          href="/example"
        >
          tag 2
        </a>
      </li>
      <li
        class="ecl-card__tag-item"
      >
        <a
          class="ecl-tag ecl-card__tag"
          href="/example"
        >
          tag 3
        </a>
      </li>
    </ul>
  </footer>
</article>
`;

exports[`Card Events renders correctly 1`] = `
<article
  class="ecl-card"
>
  <header
    class="ecl-card__header"
  >
    <div
      aria-label="card image"
      class="ecl-card__image"
      role="img"
      style="background-image:url('https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg')"
    />
    <h1
      class="ecl-card__title"
    >
      <a
        class="ecl-link ecl-link--standalone"
        href="/example"
      >
        Better regulation
      </a>
    </h1>
  </header>
  <div
    class="ecl-card__body"
  >
    <div
      class="ecl-card__description"
    >
      Transparently designing and evaluating evidence-based EU legislation, backed by citizens views.
    </div>
  </div>
  <footer
    class="ecl-card__footer"
  >
    <ul
      class="ecl-card__info-container"
    >
      <li
        class="ecl-card__info-item"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--xs"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#general--calendar"
          />
        </svg>
        <span
          class="ecl-card__info-label"
        >
          2018/10/22
        </span>
      </li>
      <li
        class="ecl-card__info-item"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--xs"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#general--location"
          />
        </svg>
        <span
          class="ecl-card__info-label"
        >
          Luxembourg
        </span>
      </li>
    </ul>
  </footer>
</article>
`;

exports[`Card Events renders correctly with extra attributes 1`] = `
<article
  class="ecl-card"
  data-test="data-test-value"
  data-test-1="data-test-value-1"
>
  <header
    class="ecl-card__header"
  >
    <div
      aria-label="card image"
      class="ecl-card__image"
      role="img"
      style="background-image:url('https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg')"
    />
    <h1
      class="ecl-card__title"
    >
      <a
        class="ecl-link ecl-link--standalone"
        href="/example"
      >
        Better regulation
      </a>
    </h1>
  </header>
  <div
    class="ecl-card__body"
  >
    <div
      class="ecl-card__description"
    >
      Transparently designing and evaluating evidence-based EU legislation, backed by citizens views.
    </div>
  </div>
  <footer
    class="ecl-card__footer"
  >
    <ul
      class="ecl-card__info-container"
    >
      <li
        class="ecl-card__info-item"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--xs"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#general--calendar"
          />
        </svg>
        <span
          class="ecl-card__info-label"
        >
          2018/10/22
        </span>
      </li>
      <li
        class="ecl-card__info-item"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--xs"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#general--location"
          />
        </svg>
        <span
          class="ecl-card__info-label"
        >
          Luxembourg
        </span>
      </li>
    </ul>
  </footer>
</article>
`;

exports[`Card Events renders correctly with extra class names 1`] = `
<article
  class="ecl-card custom-class custom-class--test"
>
  <header
    class="ecl-card__header"
  >
    <div
      aria-label="card image"
      class="ecl-card__image"
      role="img"
      style="background-image:url('https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg')"
    />
    <h1
      class="ecl-card__title"
    >
      <a
        class="ecl-link ecl-link--standalone"
        href="/example"
      >
        Better regulation
      </a>
    </h1>
  </header>
  <div
    class="ecl-card__body"
  >
    <div
      class="ecl-card__description"
    >
      Transparently designing and evaluating evidence-based EU legislation, backed by citizens views.
    </div>
  </div>
  <footer
    class="ecl-card__footer"
  >
    <ul
      class="ecl-card__info-container"
    >
      <li
        class="ecl-card__info-item"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--xs"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#general--calendar"
          />
        </svg>
        <span
          class="ecl-card__info-label"
        >
          2018/10/22
        </span>
      </li>
      <li
        class="ecl-card__info-item"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--xs"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#general--location"
          />
        </svg>
        <span
          class="ecl-card__info-label"
        >
          Luxembourg
        </span>
      </li>
    </ul>
  </footer>
</article>
`;

exports[`Card Tile renders correctly 1`] = `
<article
  class="ecl-card ecl-card--tile"
>
  <header
    class="ecl-card__header"
  >
    <h1
      class="ecl-card__title"
    >
      Better regulation
    </h1>
  </header>
  <div
    class="ecl-card__body"
  >
    <div
      class="ecl-card__description"
    >
      Transparently designing and evaluating evidence-based EU legislation, backed by citizens views.
    </div>
    <ul
      class="ecl-card__link-container"
    >
      <li
        class="ecl-card__link-item"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-card__link"
          href="/example"
        >
          link 1
        </a>
      </li>
      <li
        class="ecl-card__link-item"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-card__link"
          href="/example"
        >
          link 2
        </a>
      </li>
      <li
        class="ecl-card__link-item"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-card__link"
          href="/example"
        >
          link 3
        </a>
      </li>
    </ul>
  </div>
  <footer
    class="ecl-card__footer"
  />
</article>
`;

exports[`Card Tile renders correctly with extra attributes 1`] = `
<article
  class="ecl-card ecl-card--tile"
  data-test="data-test-value"
  data-test-1="data-test-value-1"
>
  <header
    class="ecl-card__header"
  >
    <h1
      class="ecl-card__title"
    >
      Better regulation
    </h1>
  </header>
  <div
    class="ecl-card__body"
  >
    <div
      class="ecl-card__description"
    >
      Transparently designing and evaluating evidence-based EU legislation, backed by citizens views.
    </div>
    <ul
      class="ecl-card__link-container"
    >
      <li
        class="ecl-card__link-item"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-card__link"
          href="/example"
        >
          link 1
        </a>
      </li>
      <li
        class="ecl-card__link-item"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-card__link"
          href="/example"
        >
          link 2
        </a>
      </li>
      <li
        class="ecl-card__link-item"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-card__link"
          href="/example"
        >
          link 3
        </a>
      </li>
    </ul>
  </div>
  <footer
    class="ecl-card__footer"
  />
</article>
`;

exports[`Card Tile renders correctly with extra class names 1`] = `
<article
  class="ecl-card ecl-card--tile custom-class custom-class--test"
>
  <header
    class="ecl-card__header"
  >
    <h1
      class="ecl-card__title"
    >
      Better regulation
    </h1>
  </header>
  <div
    class="ecl-card__body"
  >
    <div
      class="ecl-card__description"
    >
      Transparently designing and evaluating evidence-based EU legislation, backed by citizens views.
    </div>
    <ul
      class="ecl-card__link-container"
    >
      <li
        class="ecl-card__link-item"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-card__link"
          href="/example"
        >
          link 1
        </a>
      </li>
      <li
        class="ecl-card__link-item"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-card__link"
          href="/example"
        >
          link 2
        </a>
      </li>
      <li
        class="ecl-card__link-item"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-card__link"
          href="/example"
        >
          link 3
        </a>
      </li>
    </ul>
  </div>
  <footer
    class="ecl-card__footer"
  />
</article>
`;
